--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,8 @@ zephyr_library_sources(${QPCPP_DIR}/src/qs/qs.cpp
                         ${QPCPP_DIR}/src/qs/qs_rx.cpp
                         ${QPCPP_DIR}/src/qs/qs_fp.cpp
                         ${QPCPP_DIR}/src/qs/qutest.cpp
-                        ${QPCPP_DIR}/src/qs/qs_64bit.cpp)
+                        ${QPCPP_DIR}/src/qs/qs_64bit.cpp
+                        ${QPCPP_DIR}/include/qstamp.cpp)
 endif() #CONFIG_QSPY
 
 endif() #CONFIG_QPCPP
